# heyzeph

./: .gitignore  README.md  about.markdown  about.rst  contact.markdown  heytasha.cabal  index.html  site.hs  todo.txt
css/: _colors.scss  _widescreen.scss  default.css  default.scss  old.css  styles.css
error/: HTTP_NOT_FOUND.markdown
posts/: 2012-12-12-chaotic-pendulum.markdown  2013-05-13-neutrino-astrophysics.markdown  2016-10-17-grace-hopper.markdown  2017-06-30-femex.markdown
rafiki-posts/: 2015-07-28-greetings.markdown  2016-10-12-harriman-trip.markdown  2017-04-08-folding-bike-adventures.markdown  2017-04-17-ward-pound.markdown  2017-06-03-croton-point.markdown  2017-06-12-csa-week-1.markdown  2017-06-27-biking-the-netherlands.markdown  2017-07-20-csa-week-5.markdown  2017-07-27-csa-week-6.markdown  2017-08-03-csa-week-7.markdown  2017-08-10-csa-week-8.markdown  2017-08-17-csa-week-9.markdown  2017-08-24-csa-week-10.markdown  2017-08-31-csa-week-11.markdown  2017-09-07-csa-week-12.markdown  2017-09-11-revisiting-island-pond.markdown  2017-09-14-csa-week-13.markdown  2017-09-21-csa-week-14.markdown  2017-09-24-eating-local.markdown  2017-09-28-csa-week-15.markdown
templates/: archive.html  default.html  post.html
