name:                heytasha
version:             0.1.0.0
-- synopsis:            
-- description:         
homepage:            heytasha.com
-- license:             
license-file:        LICENSE
author:              Tasha Arvanitis
maintainer:          tasha.arvanitis@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable blog
  main-is:             site.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.6,
                       hakyll >= 4.5,
                       network-uri >= 2.6
  -- hs-source-dirs:      
  default-language:    Haskell2010
